--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     },
     "dependencies": {
         "body-parser": "^1.18.2",
+        "express-fileupload": "^1",
+        "bootstrap": "^4.3",
         "cors": "^2.8.5",
         "express": "^4.16.1",
         "ibm-cloud-env": "^0.2.6",
